--- a/GraphicEditor/Legend.xaml
+++ b/GraphicEditor/Legend.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="300" d:DesignWidth="250" x:Name="legend">
     <StackPanel VerticalAlignment="Center" Height="299" Margin="0,0,-0.4,0">
         <Label DockPanel.Dock="Top" Content="Legend:" FontFamily="Arial" FontWeight="Bold" FontSize="25" Foreground="White"/>
-        <Grid Height="246" RenderTransformOrigin="0.5,0.5" Margin="20">
+        <Grid Height="150" RenderTransformOrigin="0.5,0.5" Margin="20,20,50,20">
             <Grid.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -29,10 +29,11 @@
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
-            <Rectangle Fill="Green" Margin="5" Grid.Row="3"></Rectangle>
-            <Rectangle Fill="LightGreen" Margin="5" Grid.Row="2" Grid.RowSpan="1"/>
-            <Rectangle Fill="LavenderBlush"  Grid.ColumnSpan="1" Grid.Row="1" Margin="5"/>
-            <Label Grid.ColumnSpan="3" Margin="2.2,3.8,1.6,61.4" Grid.Row="2" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Grid.RowSpan="2">
+            <Rectangle Fill="Gold" Stroke="Black" StrokeThickness="2"  Margin="5" Grid.Row="3"></Rectangle>
+            <Rectangle Fill="LimeGreen" Stroke="Black" StrokeThickness="2" Margin="5" Grid.Row="2" Grid.RowSpan="1"/>
+            <Rectangle Fill="RoyalBlue" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Grid.Row="1" Margin="5"/>
+            <Rectangle Fill="Tomato" Stroke="Black" StrokeThickness="2" Grid.ColumnSpan="1" Margin="5,1,5,10"/>
+            <Label Grid.ColumnSpan="3" Margin="3,1,1,3" Grid.Row="3" RenderTransformOrigin="0.5,0.5" Foreground="White" FontWeight="SemiBold" Grid.Column="1">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleY="-1"/>
@@ -40,9 +41,10 @@
                         <RotateTransform/>
                         <TranslateTransform/>
                     </TransformGroup>
-                </Label.RenderTransform> TEKST
+                </Label.RenderTransform> Patient room
             </Label>
-            <Label Grid.ColumnSpan="3" Margin="2.2,3.4,-0.4,2.2" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+
+            <Label Grid.ColumnSpan="3" Margin="1,2,3,3" Grid.Row="2" Grid.Column="1" RenderTransformOrigin="0.5,0.5" Content="Examination Room" Foreground="White" FontWeight="SemiBold">
                 <Label.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform ScaleY="-1"/>
@@ -50,7 +52,29 @@
                         <RotateTransform/>
                         <TranslateTransform/>
                     </TransformGroup>
-                </Label.RenderTransform> Tekst
+                </Label.RenderTransform>
+            </Label>
+
+            <Label Grid.ColumnSpan="3" Margin="2.2,3.4,-0.4,2.2" Grid.Row="1" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Content="Operation room" Foreground="White" FontWeight="SemiBold">
+                <Label.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleY="-1"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Label.RenderTransform>
+            </Label>
+
+            <Label Grid.ColumnSpan="3" Margin="3,-1,-2,7" Grid.Row="0" RenderTransformOrigin="0.5,0.5" Grid.Column="1" Foreground="White" FontWeight="SemiBold">
+                <Label.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleY="-1"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Label.RenderTransform> Auxilary room
             </Label>
         </Grid>
     </StackPanel>
