--- a/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.css
+++ b/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.css
@@ -15,6 +15,8 @@
 
 .heading{
     margin-bottom: 0px;
+    color:  #3F51B5;
+    font-weight: bold;
 }
 
 .sections {
@@ -30,7 +32,9 @@
 }
 .mat-divider {
     border-top-color: #3F51B5;
-  }
+}
+
+
 :focus {
     outline:none;
  }
