--- a/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
+++ b/WebApplicationFrontend/src/app/registration/patient-registration/patient-registration.component.html
@@ -39,7 +39,7 @@
                 <div class="inputField">
                     <mat-form-field>
                         <mat-label>Date of birth*</mat-label>
-                        <input matInput [matDatepicker]="picker" id="dateOfBirth" placeholder="Date of birth" formControlName="dateOfBirth">
+                        <input matInput [matDatepicker]="picker" [max]="maxDateOfBirth" [min]="minDateOfBirth" id="dateOfBirth" placeholder="Date of birth" formControlName="dateOfBirth">
                         <mat-error *ngIf="!createForm.get('dateOfBirth').valid && createForm.get('dateOfBirth').touched && createForm.get('dateOfBirth').errors['required']">Please enter date of birth</mat-error>
                         <mat-datepicker-toggle matSuffix [for]="picker">
                           <mat-icon matDatepickerToggleIcon>keyboard_arrow_down</mat-icon>
@@ -139,12 +139,14 @@
                     <mat-label>City*</mat-label>
                     <input matInput id="cityOfBirth" placeholder="City" formControlName="cityOfBirth">
                     <mat-error *ngIf="!createForm.get('cityOfBirth').valid && createForm.get('cityOfBirth').touched && createForm.get('cityOfBirth').errors['required']">Please enter city</mat-error>
+                    <mat-error *ngIf="!createForm.get('cityOfBirth').valid && createForm.get('cityOfBirth').touched && createForm.get('cityOfBirth').errors['pattern']">Please enter valid city</mat-error>
                 </mat-form-field>
                 <div class="inputField">
                     <mat-form-field>
                         <mat-label>Postal code*</mat-label>
                         <input matInput id="postalCodeBirth" placeholder="Postal code" formControlName="postalCodeBirth">
                         <mat-error *ngIf="!createForm.get('postalCodeBirth').valid && createForm.get('postalCodeBirth').touched && createForm.get('postalCodeBirth').errors['required']">Please enter postal code</mat-error>
+                        <mat-error *ngIf="!createForm.get('postalCodeBirth').valid && createForm.get('postalCodeBirth').touched && createForm.get('postalCodeBirth').errors['pattern']">Please enter valid postal code</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="inputField">
@@ -152,6 +154,7 @@
                         <mat-label>State*</mat-label>
                         <input matInput id="stateBirth" placeholder="State" formControlName="stateBirth">
                         <mat-error *ngIf="!createForm.get('stateBirth').valid && createForm.get('stateBirth').touched && createForm.get('stateBirth').errors['required']">Please enter state</mat-error>
+                        <mat-error *ngIf="!createForm.get('stateBirth').valid && createForm.get('stateBirth').touched && createForm.get('stateBirth').errors['pattern']">Please valid state</mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -180,12 +183,14 @@
                     <mat-form-field>
                         <mat-label>Apartment</mat-label>
                         <input matInput matTooltip="Please enter apartment number or 0" id="apartment" placeholder="Apartment" formControlName="apartment">
+                        <mat-error *ngIf="!createForm.get('apartment').valid && createForm.get('apartment').touched && createForm.get('apartment').errors['pattern']">Please enter vaid apartment</mat-error>
                     </mat-form-field>
                 </div>
                 <div class="inputField">
                     <mat-form-field>
                         <mat-label>Floor</mat-label>
                         <input matInput matTooltip="Please enter floor number or 0" id="floor" placeholder="Floor" formControlName="floor">
+                        <mat-error *ngIf="!createForm.get('floor').valid && createForm.get('floor').touched && createForm.get('floor').errors['pattern']">Please enter vaid floor</mat-error>
                     </mat-form-field>
                 </div>
             </div>
@@ -232,6 +237,36 @@
                 <div class="col-12 heading-col">
                     <h4 class="heading">Medical record info</h4>
                     <mat-divider class="divider"></mat-divider>
+                </div>
+            </div>
+
+            <div class="sections">
+                <div class="row">
+                    <mat-form-field>
+                        <mat-label>Patient condition</mat-label>
+                        <mat-select id="patientCondition" name="patientCondition" formContronName="patientCondition">
+                            <mat-option value="Stable">Stable</mat-option>
+                            <mat-option value="Urgent">Urgent</mat-option>
+                            <mat-option value="HospitalTreatment">HospitalTreatment</mat-option>
+                            <mat-option value="HomeTreatment">HomeTreatment</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    
+                    <div class="inputField">
+                        <mat-form-field>
+                            <mat-label>Blood type</mat-label>
+                            <mat-select>
+                                <mat-option value="ONeg">ONeg</mat-option>
+                                <mat-option value="OPlus">OPlus</mat-option>
+                                <mat-option value="ANeg">ANeg</mat-option>
+                                <mat-option value="APlus">APlus</mat-option>
+                                <mat-option value="BNeg">BNeg</mat-option>
+                                <mat-option value="BPlus">BPlus</mat-option>
+                                <mat-option value="AbNeg">AbNeg</mat-option>
+                                <mat-option value="AbPlus">AbPlus</mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
                 </div>
             </div>
             <div class="row sections">
